# hermes-agent

./: .gitignore  config.yaml
tools/: registry.py
tools/file_manager/: SPEC.md  __init__.py  server.py
tools/file_manager/api/: __init__.py  admin.py  auth.py  dto.py  files.py  lifecycle_handler.py  middleware.py  share.py  webhook.py
tools/file_manager/engine/: __init__.py  audit.py  lifecycle_decorators.py  lifecycle_engine.py  lifecycle_exception.py  models.py  permission.py  storage.py  storage_adapters.py
tools/file_manager/gui/: main.py
tools/file_manager/services/: __init__.py  admin_analytics_service.py  admin_service.py  audit_subscriber.py  auth_service.py  collaboration_service.py  event_bus.py  file_lock_service.py  file_service.py  notebook_service.py  notification_service.py  permission_checker.py  permission_context.py  share_service.py  space_service.py  team_service.py  trash_service.py  workflow_service.py
tools/file_manager/src-tauri/: Cargo.toml  tauri.conf.json
tools/file_manager/src-tauri/capabilities/: default.json
tools/file_manager/src-tauri/icons/: icon.icns
tools/file_manager/src-tauri/src/: main.rs
tools/file_manager/tests/: __init__.py  test_api_admin.py  test_api_auth.py  test_api_files.py  test_api_share.py  test_audit.py  test_models.py  test_permission_engine.py  test_storage.py  test_teams.py  test_trash_service.py
tools/file_manager/tools/: __init__.py  file_manager_tools.py
tools/file_manager/web/: app.html  floating.html  index.html
tools/knowledge/: __init__.py
website/docs/guides/: notebook-as-learning.md
(+17 files in other folders)
